Implement block actions and mob spawn restrictions near spawn
Added new configuration options in config.yml for preventing block breaking, block placing, and mob spawning near the spawn area. This was implemented by adding relevant event handlers in the SpawnTownDistance class, which check the configured options and the distance from the spawn before allowing these actions. New permission checks were also added in the event handlers to bypass these restrictions.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,3 +4,6 @@ spawn-town-chunk-location:
   z: 0
 unclaimable-distance: 10
 message: "<red>You cannot claim a town this close to spawn"
+prevent-block-place: true
+prevent-block-break: true
+prevent-mob-spawns: true
